use netty, change to table module & controller module & keep module

--- a/src/main/resources/floodlightdefault.properties
+++ b/src/main/resources/floodlightdefault.properties
@@ -16,6 +16,8 @@ net.floodlightcontroller.firewall.Firewall,\
 net.floodlightcontroller.forwarding.Forwarding,\
 net.floodlightcontroller.devicemanager.internal.DeviceManagerImpl,\
 edu.thu.ebgp.egpkeepalive.EGPKeepAlive,\
+edu.thu.ebgp.routing.BGPRoutingTable,\
+edu.thu.ebgp.controller.BGPControllerMain,\
 edu.thu.bgp.gather.GatherModule
 org.sdnplatform.sync.internal.SyncManager.authScheme=CHALLENGE_RESPONSE
 org.sdnplatform.sync.internal.SyncManager.keyStorePath=/etc/floodlight/auth_credentials.jceks
