--- a/src/main/resources/floodlightdefault.properties
+++ b/src/main/resources/floodlightdefault.properties
@@ -17,7 +17,8 @@ net.floodlightcontroller.forwarding.Forwarding,\
 net.floodlightcontroller.devicemanager.internal.DeviceManagerImpl,\
 edu.thu.ebgp.routing.BGPRoutingTable,\
 edu.thu.ebgp.controller.BGPControllerMain,\
-edu.thu.bgp.gather.GatherModule
+edu.thu.bgp.gather.GatherModule,\
+edu.thu.ibgp.InternalBGPModule
 org.sdnplatform.sync.internal.SyncManager.authScheme=CHALLENGE_RESPONSE
 org.sdnplatform.sync.internal.SyncManager.keyStorePath=/etc/floodlight/auth_credentials.jceks
 org.sdnplatform.sync.internal.SyncManager.dbPath=/var/lib/floodlight/
